--- a/Auriculoterapia.Api/Auriculoterapia.Api.csproj
+++ b/Auriculoterapia.Api/Auriculoterapia.Api.csproj
@@ -8,6 +8,8 @@
      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.4"/>
      <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="3.1.1"/>
      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4"/>
+     <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.1"/>
+     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1"/>
   </ItemGroup>
 
 </Project>
