vamoh a ver que sale

--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -9,13 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
+        <activity android:name=".activities.AppointmentPatientManagement"/>
+        <activity android:name=".MainActivityPatient" />
         <activity android:name=".activities.RegisterActivity" />
-
-
         <activity android:name=".activities.AppointmentManagement" />
         <activity android:name=".MainActivity">
-
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
