--- a/Auriculoterapia.Api/Auriculoterapia.Api.csproj
+++ b/Auriculoterapia.Api/Auriculoterapia.Api.csproj
@@ -10,6 +10,7 @@
      <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.4"/>
      <PackageReference Include="Microsoft.IdentityModel.Tokens" Version="6.5.1"/>
      <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.5.1"/>
+     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.4"/>
   </ItemGroup>
 
 </Project>
