--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -2,25 +2,30 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.android.auriculoterapia_app">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:usesCleartextTraffic="true"
+        >
+        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
         <activity android:name=".activities.AppointmentPatientManagement"/>
         <activity android:name=".MainActivityPatient" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.AppointmentManagement" />
-        <activity android:name=".MainActivity">
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".activities.LogInActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activities.LogInActivity" />
     </application>
 
 </manifest>
