--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -11,15 +11,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true"
-        >
-        <uses-library android:name="org.apache.http.legacy" android:required="false"/>
-        <activity android:name=".activities.AppointmentPatientManagement"/>
+        android:usesCleartextTraffic="true">
+        <activity android:name=".SearchPatientsActivity"></activity>
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
+        <activity android:name=".activities.AppointmentPatientManagement" />
         <activity android:name=".MainActivityPatient" />
         <activity android:name=".activities.RegisterActivity" />
         <activity android:name=".activities.AppointmentManagement" />
-        <activity android:name=".MainActivity"/>
-        <activity android:name=".activities.LogInActivity" >
+        <activity android:name=".MainActivity" />
+        <activity android:name=".activities.LogInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
