--- a/Auriculoterapia.Api/appsettings.json
+++ b/Auriculoterapia.Api/appsettings.json
@@ -2,9 +2,9 @@
   "AppSettings":{
     "Token": "super secret key doesnt work"
   },
-  "connectionStrings":{
+  "connectionStrings": {
 
-    "DefaultConnection":"server=localhost; port=3306; database=AuriculoterapiaDb; user=root; password=root"
+    "DefaultConnection": "server=z8dl7f9kwf2g82re.cbetxkdyhwsb.us-east-1.rds.amazonaws.com; port=3306; database=m9wogfp1a7afp76v; user=cv9yen6oj0koulf8; password=pg3tgiuopow2hp47"
 
   },
   "Logging": {
