--- a/Auriculoterapia.Api/appsettings.json
+++ b/Auriculoterapia.Api/appsettings.json
@@ -2,9 +2,9 @@
   "AppSettings":{
     "Token": "super secret key doesnt work"
   },
-  "connectionStrings":{
+  "connectionStrings": {
 
-    "DefaultConnection":"server=localhost; port=3306; database=AuriculoterapiaDb; user=root; password="
+    "DefaultConnection": "server=us-cdbr-east-02.cleardb.com; port=3306; database=heroku_f1c82bc2c4df420; user=b3924111c618d6; password=58a3338d"
 
   },
   "Logging": {
