--- a/Auriculoterapia/app/build.gradle
+++ b/Auriculoterapia/app/build.gradle
@@ -46,4 +46,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation group: 'com.cloudinary', name: 'cloudinary-android', version: '1.28.2'
+
 }
