--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -12,8 +13,9 @@
         android:roundIcon="@mipmap/logo_ear_2_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
-        android:usesCleartextTraffic="true">
-        <activity android:name=".activities.ChangeKeyWordActivity" ></activity>
+        android:usesCleartextTraffic="true" >
+        <activity android:name=".activities.InitialImageActivity" />
+        <activity android:name=".activities.ChangeKeyWordActivity" />
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.AnswerTreatmentRequestActivity" />
         <activity android:name=".activities.TreatmentRequestActivity" />
