--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -13,7 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.ChangeKeyWordActivity" ></activity>
+        <activity android:name=".activities.HistoryActivity"/>
+        <activity android:name=".activities.ChangeKeyWordActivity" />
         <activity android:name=".activities.SettingsActivity" />
         <activity android:name=".activities.AnswerTreatmentRequestActivity" />
         <activity android:name=".activities.TreatmentRequestActivity" />
