--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -8,6 +8,7 @@
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".AuriculoterapiaTP"
         android:allowBackup="true"
         android:icon="@mipmap/logo_ear_2"
         android:label="@string/app_name"
