--- a/Auriculoterapia/app/build.gradle
+++ b/Auriculoterapia/app/build.gradle
@@ -53,4 +53,5 @@ dependencies {
 
     implementation group: 'com.cloudinary', name: 'cloudinary-android', version: '1.28.2'
     implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
+    implementation 'com.github.vihtarb:tooltip:0.1.9'
 }
