--- a/Auriculoterapia/app/src/main/AndroidManifest.xml
+++ b/Auriculoterapia/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission-sdk-23 android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission-sdk-23 android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission-sdk-23 android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
+    <uses-permission-sdk-23 android:name="android.permission.CALL_PHONE"/>
     <application
         android:name=".AuriculoterapiaTP"
         android:allowBackup="true"
